# gaia

./: .coverage  CONTRIBUTORS.md  Dockerfile  Dockerfile.standalone  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish-ghcr.yml  release.yml
docs/badges/: tests.json
docs/landing/: index.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  CosmicCanvas.tsx  index.css
frontend/src/scenes/: gaia.tsx
gaia/: __init__.py  app.py  attestation.py  capabilities.py  clock.py  fleet.py  main.py  middleware.py  plausibility.py  verifier.py  wot.py
gaia/devices/: __init__.py  air_quality.py  base.py  energy.py  live.py  weather.py
tests/: conftest.py  test_app_and_wot.py  test_attestation_and_plausibility.py  test_devices.py  test_hub_e2e.py  test_live_devices.py  test_security.py
