[project]
name = "gaia-gateway"
version = "0.1.0"
description = "GAIA — physical-world oracle gateway: virtual IoT devices sold as signed, verifiable AIMarket capabilities"
requires-python = ">=3.11"
dependencies = ["oracle-core", "httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
